<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C52E2E"
    android:backgroundTint="#8E3C3C"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/background_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#19FFFFFF"
        android:contentDescription="@string/bg_img"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ewee"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/today_date"
        android:layout_width="355dp"
        android:layout_height="34dp"
        android:text="@string/today_date"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background_main"
        app:layout_constraintVertical_bias="0.081"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/main_desc"
        android:layout_width="368dp"
        android:layout_height="37dp"
        android:text="@string/main_desc"
        android:textAlignment="center"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/today_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background_main"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="403dp"
        android:layout_height="67dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/today_date"
        app:layout_constraintVertical_bias="0.022">

        <Button
            android:id="@+id/date_btn"
            android:layout_width="15dp"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:backgroundTint="#719F51"
            android:text="@string/plz_input_date"
            android:textColor="#1B1B1B"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/date_edit"
            android:layout_width="180dp"
            android:layout_height="70dp"
            android:layout_weight="0.6"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/plz_input_date"
            android:inputType="date"
            android:textColorHint="#212121"
            android:textSize="18sp" />


    </LinearLayout>

    <RadioGroup
        android:id="@+id/radio_type_choice"
        android:layout_width="390dp"
        android:layout_height="49dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/background_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.034">

        <RadioButton
            android:id="@+id/start_date_rb"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:text="@string/start_date"
            android:textAlignment="inherit"
            android:textColor="#132235"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/end_date_rb"
            android:layout_width="207dp"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            android:textAlignment="inherit"
            android:textColor="#7E1010"
            android:textSize="24sp" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/comment_linear"
        android:layout_width="393dp"
        android:layout_height="75dp"
        android:layout_margin="10dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_type_choice"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/comment_edit"
            android:layout_width="295dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/edit_comment"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#3E2723"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="76dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:backgroundTint="#F8E542"
            android:text="@string/submit"
            android:textAlignment="center"
            android:textColor="#17470C"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    </LinearLayout>

    <Button
        android:id="@+id/edit_page"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_marginEnd="40dp"
        android:layout_weight="1"
        android:backgroundTint="#A83F35"
        android:text="@string/edit_page"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.957" />

    <Button
        android:id="@+id/analyze_page"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:layout_weight="1"
        android:backgroundTint="#4035A8"
        android:text="@string/analyze_page"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.957" />

    <TextView
        android:id="@+id/testView"
        android:layout_width="399dp"
        android:layout_height="148dp"
        android:layout_marginBottom="248dp"
        android:scrollbars="vertical"
        android:text="@string/test"
        android:textColor="#1D3012"
        android:textColorHighlight="#401010"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comment_linear"
        app:layout_constraintVertical_bias="0.173"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <LinearLayout
        android:id="@+id/test_liner_layout"
        android:layout_width="367dp"
        android:layout_height="110dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/testView"
        app:layout_constraintVertical_bias="0.107">

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>