<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditPage">


    <ImageView
        android:id="@+id/background_edit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/bg_img"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/bishou"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/edit_page_title"
        android:layout_width="330dp"
        android:layout_height="37dp"
        android:gravity="center"
        android:text="@string/page_2_dec"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/layout_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />


    <LinearLayout
        android:id="@+id/layout_1"
        android:layout_width="362dp"
        android:layout_height="96dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/background_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.114">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/start_date_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/start_date"
                android:importantForAutofill="no"
                android:inputType="date"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck,DuplicateSpeakableTextCheck" />

            <EditText
                android:id="@+id/end_date_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/end_date"
                android:importantForAutofill="no"
                android:inputType="date"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TextContrastCheck,DuplicateSpeakableTextCheck" />
        </LinearLayout>


        <Button
            android:id="@+id/edit_1"
            android:layout_width="5dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:backgroundTint="#87B86D"
            android:hapticFeedbackEnabled="false"
            android:text="@string/edit"
            android:textColor="#283593"
            android:textSize="20sp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/delete_1"
            android:layout_width="5dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:backgroundTint="#9A4444"
            android:text="@string/delete"
            android:textColor="#F1F1F1"
            android:textSize="20sp"
            tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_2"
        android:layout_width="362dp"
        android:layout_height="96dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/background_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_1"
        app:layout_constraintVertical_bias="0.049">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/start_date_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/start_date"
                android:importantForAutofill="no"
                android:inputType="date"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/end_date_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/end_date"
                android:importantForAutofill="no"
                android:inputType="date"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TextContrastCheck" />
        </LinearLayout>


        <Button
            android:id="@+id/edit_2"
            android:layout_width="5dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:backgroundTint="#87B86D"
            android:hapticFeedbackEnabled="false"
            android:text="@string/edit"
            android:textColor="#283593"
            android:textSize="20sp"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

        <Button
            android:id="@+id/delete_2"
            android:layout_width="5dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:backgroundTint="#9A4444"
            android:text="@string/delete"
            android:textColor="#F1F1F1"
            android:textSize="20sp"
            tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_3"
        android:layout_width="362dp"
        android:layout_height="96dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/background_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_2"
        app:layout_constraintVertical_bias="0.049">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/start_date_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/start_date"
                android:importantForAutofill="no"
                android:inputType="date"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/end_date_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/end_date"
                android:importantForAutofill="no"
                android:inputType="date"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TextContrastCheck" />
        </LinearLayout>


        <Button
            android:id="@+id/edit_3"
            android:layout_width="5dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:backgroundTint="#87B86D"
            android:hapticFeedbackEnabled="false"
            android:text="@string/edit"
            android:textColor="#283593"
            android:textSize="20sp"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

        <Button
            android:id="@+id/delete_3"
            android:layout_width="5dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:backgroundTint="#9A4444"
            android:text="@string/delete"
            android:textColor="#F1F1F1"
            android:textSize="20sp"
            tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_4"
        android:layout_width="362dp"
        android:layout_height="96dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/background_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_3"
        app:layout_constraintVertical_bias="0.049">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/start_date_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/start_date"
                android:importantForAutofill="no"
                android:inputType="date"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/end_date_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/end_date"
                android:importantForAutofill="no"
                android:inputType="date"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TextContrastCheck" />
        </LinearLayout>


        <Button
            android:id="@+id/edit_4"
            android:layout_width="5dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:backgroundTint="#87B86D"
            android:hapticFeedbackEnabled="false"
            android:text="@string/edit"
            android:textColor="#283593"
            android:textSize="20sp"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

        <Button
            android:id="@+id/delete_4"
            android:layout_width="5dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:backgroundTint="#9A4444"
            android:text="@string/delete"
            android:textColor="#F1F1F1"
            android:textSize="20sp"
            tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />
    </LinearLayout>


    <Button
        android:id="@+id/main_page"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_marginEnd="40dp"
        android:layout_weight="1"
        android:backgroundTint="#A83F35"
        android:text="@string/main_page"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.957" />

    <Button
        android:id="@+id/analyze_page"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:layout_weight="1"
        android:backgroundTint="#4035A8"
        android:text="@string/analyze_page"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.957" />


</androidx.constraintlayout.widget.ConstraintLayout>